--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <title>Doggo Image Generator</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
     <h1>Doggos</h1>
     <button class="add-doggo">Add Doggo</button>
+    <div class="loading"></div>
     <div class="doggos"></div>
-
     <script src="./doggos.js"></script>
   </body>
 </html>
