adding Styles and tailoring loading icon (WIP)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
   <body>
     <h1>Doggos</h1>
-    <button class="add-doggo">Add Doggo</button>
-    <div class="loading"></div>
-    <div class="doggos"></div>
+    <button id="add-doggo" class="add-doggo-button">Add Doggo</button>
+    <div id="loading-wrapper">
+      <div id="loading"></div>
+    </div>
+    <div id="doggos"></div>
+
     <script src="./doggos.js"></script>
   </body>
 </html>
