added styling and ability to request a specific dog breed image

--- a/index.html
+++ b/index.html
@@ -11,30 +11,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@300;500&family=Lobster&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
-    <div id="header">
-      <div class="logo">doggos.</div>
-    </div>
-
-    <div class="random-subheader">
-      <div class="subheader logo">random</div>
-      <div class="button-container">
-        <button class="add-doggo-button">add doggo</button>
+    <h1 id="header">
+      <div class="logo">Doggos.</div>
+      <div id="slogan" class="logo">your daily dose of happiness</div>
+    </h1>
+    <div class="subheader-container">
+      <div class="subheader">
+        <div class="logo">random</div>
+        <div class="button-container">
+          <button class="add-doggo-button">add doggo</button>
+        </div>
+      </div>
+      <div id="by-breed-section" class="subheader">
+        <div class="logo">by breed</div>
+        <div class="button-container">
+          <button class="add-doberman-button">whippet</button>
+        </div>
       </div>
     </div>
-    <div class="by-breed-subheader">
-      <div class="subheader logo">by breed</div>
-      <div class="button-container">
-        <button class="add-doggo-button">add doggo</button>
-      </div>
-    </div>
 
-    <div class="doggo-crate"></div>
+    <div class="doggo-container"></div>
 
     <script src="./doggos.js"></script>
   </body>
