Adding logic to pass button breed type (WIP)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <div id="by-breed-section" class="subheader">
         <div class="logo">by breed</div>
         <div class="button-container">
-          <button class="add-doberman-button">whippet</button>
+          <button class="add-doberman">doberman</button>
+          <button class="add-whippet">whippet</button>
         </div>
       </div>
     </div>
