adding archaic staged commits #yolo

--- a/index.html
+++ b/index.html
@@ -25,14 +25,21 @@
       <div class="subheader">
         <div class="logo">random</div>
         <div class="button-container">
-          <button class="add-doggo-button">add doggo</button>
+          <button class="button add-doggo-button">add doggo</button>
         </div>
       </div>
       <div id="by-breed-section" class="subheader">
         <div class="logo">by breed</div>
         <div class="button-container">
-          <button class="add-doberman">doberman</button>
-          <button class="add-whippet">whippet</button>
+          <button class="button add-doberman">doberman</button>
+          <button class="button add-whippet">whippet</button>
+          <button class="button add-germanshepherd">german shepherd</button>
+          <button class="button add-vizsla">hungarian vizsla</button>
+          <button class="button add-jack-russell-terrier">
+            jack russell terrier
+          </button>
+          <button class="button add-borzoi">borzoi</button>
+          <button class="button add-chihuahua">chihuahua</button>
         </div>
       </div>
     </div>
